.metadata/.plugins/org.eclipse.cdt.ui/primeiro_projeto.build.log
10:14:41 **** Incremental Build of configuration Debug for project primeiro_projeto ****
make -j8 all 
arm-none-eabi-gcc "../app/app.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -I./app -I"D:/STM32CubeIDE/workspace_1.6.0/primeiro_projeto/app" -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"app/app.d" -MT"app/app.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "app/app.o"
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -I./app -I"D:/STM32CubeIDE/workspace_1.6.0/primeiro_projeto/app" -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c:25:10: error: #include expects "FILENAME" or <FILENAME>
   25 | #include app.h
      |          ^~~
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:96:4: warning: implicit declaration of function 'app_loop' [-Wimplicit-function-declaration]
   96 |    app_loop();
      |    ^~~~~~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
make: *** Waiting for unfinished jobs....
"make -j8 all" terminated with exit code 2. Build might be incomplete.

10:14:43 Build Failed. 3 errors, 1 warnings. (took 1s.418ms)

